apps/uptime-kuma/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-kuma
  labels:
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/managed-by: argocd
